3.1.1/_sources/gallery/pyplots/annotation_basic.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_annotation_basic.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_annotation_basic.py:


=================
Annotating a plot
=================

This example shows how to annotate a plot with an arrow pointing to provided
coordinates. We modify the defaults of the arrow, to "shrink" it.

For a complete overview of the annotation capabilities, also see the
:doc:`annotation tutorial</tutorials/text/annotations>`.


.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()

    t = np.arange(0.0, 5.0, 0.01)
    s = np.cos(2*np.pi*t)
    line, = ax.plot(t, s, lw=2)

    ax.annotate('local max', xy=(2, 1), xytext=(3, 1.5),
                arrowprops=dict(facecolor='black', shrink=0.05),
                )
    ax.set_ylim(-2, 2)
    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_annotation_basic_001.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.annotate
    matplotlib.pyplot.annotate




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function annotate at 0x7fb11b15f730>




.. _sphx_glr_download_gallery_pyplots_annotation_basic.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: annotation_basic.py <annotation_basic.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotation_basic.ipynb <annotation_basic.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
